# Surge_Expired

./: .editorconfig  .gitignore  CMakeLists.txt  imgui.ini
Editor/: CMakeLists.txt
Editor/Source/: Editor.cpp  Editor.hpp
Editor/Source/Panels/: InspectorPanel.cpp  PaneManager.hpp  PanelCode.hpp  PerformancePanel.cpp  RenderProcedurePanel.cpp  SceneHierarchyPanel.cpp  SceneHierarchyPanel.hpp  Titlebar.cpp  Titlebar.hpp  ViewportPanel.cpp  ViewportPanel.hpp
Editor/Source/Utility/: ImGuiAux.cpp  ImGuiAux.hpp
Engine/: CMakeLists.txt
Engine/Assets/Shaders/: PBR.glsl  Quad.frag  Quad.vert  Renderer2D.glsl  Renderer2D.glsl_FRAGMENT.spv  Renderer2D.glsl_Fragment.spv  Renderer2D.glsl_VERTEX.spv  Renderer2D.glsl_Vertex.spv  Renderer2D.shader  Renderer2D.shader_Fragment.spv  Renderer2D.shader_Vertex.spv  Renderer3D.glsl  Renderer3D.glsl_FRAGMENT.spv  Renderer3D.glsl_Fragment.spv  Renderer3D.glsl_VERTEX.spv  Renderer3D.glsl_Vertex.spv  Triangle.frag  Triangle.frag.spv  Triangle.vert.spv
Engine/Assets/Temp/ShaderCache/: PBR.glsl.Vertex.spv  ShaderHash.txt
Engine/Source/Surge/: Pch.hpp  Surge.hpp
Engine/Source/Surge/AssetManager/: AssetBase.hpp  AssetEnums.hpp  AssetExtensions.hpp  AssetManager.cpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp
Engine/Source/Surge/AssetManager/AssetImporter/: AssetLoader.cpp  AssetLoader.hpp  IAssetLoader.hpp  MaterialLoader.cpp  MaterialLoader.hpp  TextureLoader.cpp  TextureLoader.hpp
Engine/Source/Surge/Core/: Buffer.hpp  Client.hpp  Core.cpp  Core.hpp  Defines.hpp  Memory.hpp  Path.hpp  Process.cpp  Process.hpp  Profiler.hpp  UUID.cpp  UUID.hpp
Engine/Source/Surge/Core/Events/: Event.hpp
Engine/Source/Surge/Core/Input/: Input.hpp
Engine/Source/Surge/Core/Logger/: Logger.hpp
Engine/Source/Surge/Core/Project/: Project.cpp
Engine/Source/Surge/Core/Thread/: ThreadPool.hpp
Engine/Source/Surge/Core/Time/: Timer.hpp
Engine/Source/Surge/Core/Window/: Window.hpp
Engine/Source/Surge/ECS/: Components.cpp  Components.hpp  Scene.cpp  Scene.hpp
Engine/Source/Surge/Graphics/: Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  RenderContext.hpp
Engine/Source/Surge/Graphics/Abstraction/Vulkan/: VulkanComputePipeline.cpp  VulkanDescriptorSet.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFramebuffer.cpp  VulkanGraphicsPipeline.cpp  VulkanImGuiContext.cpp  VulkanImGuiContext.hpp  VulkanMaterial.cpp  VulkanMemoryAllocator.cpp  VulkanMemoryAllocator.hpp  VulkanRenderCommandBuffer.cpp  VulkanRenderContext.cpp  VulkanRenderContext.hpp  VulkanShader.cpp  VulkanShader.hpp  VulkanSwapChain.cpp  VulkanSwapChain.hpp  VulkanUtils.cpp  VulkanUtils.hpp
Engine/Source/Surge/Graphics/Camera/: Camera.hpp  EditorCamera.cpp
Engine/Source/Surge/Graphics/Core/: FrameAllocator.cpp  FrameAllocator.hpp  HandlePool.hpp  RendererConfig.cpp  RendererConfig.hpp
Engine/Source/Surge/Graphics/Interface/: ComputePipeline.hpp  DescriptorSet.hpp  Framebuffer.hpp  Image.cpp  Image.hpp  Texture.cpp  Texture.hpp
Engine/Source/Surge/Graphics/Material/: Material.cpp  Material.hpp  MaterialRegistry.cpp  MaterialRegistry.hpp
Engine/Source/Surge/Graphics/Mesh/: DefaultMeshes.hpp  Mesh.cpp  Mesh.hpp
Engine/Source/Surge/Graphics/RHI/: RHI.hpp  RHICommandBuffer.cpp  RHICommandBuffer.hpp  RHIDescriptors.hpp  RHIDescs.hpp  RHIDevice.cpp  RHIDevice.hpp  RHIFrameContext.hpp  RHIHandle.hpp  RHIResources.hpp  RHISettings.hpp  RHISwapchain.cpp  RHISwapchain.hpp  RHITypes.hpp
Engine/Source/Surge/Graphics/RHI/Vulkan/: VulkanBindlessRegistry.cpp  VulkanBindlessRegistry.hpp  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanDebugger.cpp  VulkanDebugger.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanDiagnostics.cpp  VulkanDiagnostics.hpp  VulkanFrame.cpp  VulkanFrame.hpp  VulkanFramebuffer.cpp  VulkanFramebuffer.hpp  VulkanImGui.cpp  VulkanImGui.hpp  VulkanImGuiContext.cpp  VulkanImGuiContext.hpp  VulkanImage.cpp  VulkanImage.hpp  VulkanMemoryAllocator.cpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRHI.cpp  VulkanRHI.hpp  VulkanRHICommandBuffer.cpp  VulkanRHICommandBuffer.hpp  VulkanRHIDevice.cpp  VulkanRHIDevice.hpp  VulkanRHISwapchain.cpp  VulkanRHISwapchain.hpp  VulkanRenderpassCache.cpp  VulkanRenderpassCache.hpp  VulkanRenderpassFactory.cpp  VulkanRenderpassFactory.hpp  VulkanResourceEntries.hpp  VulkanResourcePools.hpp  VulkanResources.cpp  VulkanResources.hpp  VulkanShader.cpp  (+7 more)
Engine/Source/Surge/Graphics/RenderGraph/: RenderGraph.cpp  RenderGraph.hpp  RenderGraphBuilder.hpp  RenderGraphPass.hpp  RenderGraphResource.hpp
Engine/Source/Surge/Graphics/RenderProcedure/: GeometryProcedure.cpp  GeometryProcedure.hpp  LightCullingProcedure.cpp  LightCullingProcedure.hpp  PreDepthProcedure.cpp  PreDepthProcedure.hpp  RenderProcedureManager.hpp  ShadowMapProcedure.cpp  ShadowMapProcedure.hpp
Engine/Source/Surge/Graphics/Renderer/: ForwardRenderer.cpp  ForwardRenderer.hpp  Lights.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  ShadowRenderer.cpp  ShadowRenderer.hpp  UIRenderer.cpp  UIRenderer.hpp
Engine/Source/Surge/Graphics/Shader/: ReflectionData.cpp  ReflectionData.hpp  Shader.cpp  Shader.hpp  ShaderReflector.cpp  ShaderReflector.hpp  ShaderSet.cpp  ShaderSet.hpp
Engine/Source/Surge/Platform/Android/: AndroidApp.hpp  AndroidFileDialogs.cpp  AndroidFilesystem.cpp  AndroidInput.cpp  AndroidPlatform.cpp  AndroidWindow.cpp  AndroidWindow.hpp  FileDialogs.cpp
Engine/Source/Surge/Platform/Windows/: FileDialogs.cpp  WindowsFilesystem.cpp  WindowsInput.cpp  WindowsPlatform.cpp  WindowsWindow.cpp
Engine/Source/Surge/Serializer/: Serializer.cpp  Serializer.hpp
Engine/Source/Surge/Utility/: FileDialogs.hpp  Filesystem.hpp  Platform.hpp
Engine/Source/SurgeMath/: Math.hpp
Engine/Source/SurgeReflect/Include/SurgeReflect/: SurgeReflect.hpp  Type.hpp  TypeTraits.hpp  Variable.hpp
Player/: CMakeLists.txt
Player/Source/: AndroidMain.cpp  Player.cpp  Player.hpp
android/app/src/main/cpp/: CMakeLists.txt
(+13 files in other folders)
